# flickr-flask-login-demo

./: .gitignore  LICENSE.md  README.md  app.py  dev_requirements.in  dev_requirements.txt  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: test.yml
templates/: homepage.html
tests/: conftest.py  test_auth_flow.py  test_demo.py  test_end_to_end.py  test_homepage.py  test_login_flow_edge_cases.py  test_pages.py  test_truth.py
tests/fixtures/cassettes/: test_end_to_end.yml
tests/stubs/: authlib.integrations.httpx_client.pyi  flask_login.pyi  vcr.pyi
