[build-system]
requires = ["setuptools >= 65"]
build-backend = "setuptools.build_meta"

[project]
name = "commons.flickr.org"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Flickr-Foundation/flickr-flask-auth"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["app.py", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.interrogate]
fail_under = 100
omit-covered-files = true
