[build-system]
requires = ["setuptools >= 65"]
build-backend = "setuptools.build_meta"

[project]
name = "flickr-flask-auth"
version = "1.0.0"
requires-python = ">=3.13"

[project.urls]
"Homepage" = "https://github.com/Flickr-Foundation/flickr-flask-auth"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.interrogate]
fail_under = 100
omit-covered-files = true
ignore-init-method = true
